# supermarket-sales

./: .gitignore  README.md  cls  dashbord.py  leia-me.txt  main.py  menu.py  pyproject.toml
dados/: supermarket_sales.csv
