[project]
name = "supermaket-sales"
version = "0.1.0"
description = "Nesse projeto, utilizei pandas para analisar as vendas de um supermercado ficticio e extrai alguns dados importantes! "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "streamlit>=1.19.0",
]
